cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
project( ball_tracking )
find_package( OpenCV REQUIRED )
find_library(wiringPi_LIB wiringPi)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ball_tracking source/ball_tracking.cpp )
target_link_libraries( ball_tracking ${wiringPi_LIB} ${OpenCV_LIBS} )